vlib/v/checker/tests/import_symbol_unclosed.vv
import crypto.sha256 { sum ]
